@@ -1185,16 +1185,6 @@ decl_stmt|;
 name|gpointer
 name|pr
 decl_stmt|;
-name|gint
-name|x
-decl_stmt|,
-name|y
-decl_stmt|;
-name|gint
-name|width
-decl_stmt|,
-name|height
-decl_stmt|;
 name|cairo_t
 modifier|*
 name|cr
@@ -1205,6 +1195,16 @@ name|surface
 decl_stmt|;
 name|cairo_path_t
 name|path
+decl_stmt|;
+name|gint
+name|x
+decl_stmt|,
+name|y
+decl_stmt|;
+name|gint
+name|width
+decl_stmt|,
+name|height
 decl_stmt|;
 name|g_return_if_fail
 argument_list|(
@@ -1376,11 +1376,10 @@ name|tmp_buf
 init|=
 name|NULL
 decl_stmt|;
+specifier|const
 name|gint
 name|stride
-decl_stmt|;
-name|stride
-operator|=
+init|=
 name|cairo_format_stride_for_width
 argument_list|(
 name|CAIRO_FORMAT_A8
@@ -1389,7 +1388,7 @@ name|maskPR
 operator|.
 name|w
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 name|maskPR
@@ -1412,9 +1411,6 @@ name|guchar
 modifier|*
 name|dest
 decl_stmt|;
-name|gint
-name|i
-decl_stmt|;
 name|dest
 operator|=
 name|tmp_buf
@@ -1434,6 +1430,9 @@ operator|!
 name|replace
 condition|)
 block|{
+name|gint
+name|i
+decl_stmt|;
 for|for
 control|(
 name|i
